--- a/portfolio.html
+++ b/portfolio.html
@@ -10,9 +10,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@900&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-    integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -25,10 +29,12 @@
           </a>
           <ul class="header-list list">
             <li class="header-item">
-              <a class="link header-link" href="./index.html">Studio</a>
+              <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="link header-link" href="./portfolio.html">Portfolio</a>
+              <a class="header-hover link header-link" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="header-item">
               <a class="link header-link" href="">Contacts</a>
@@ -68,12 +74,20 @@
           <ul class="cards-list list">
             <li class="cards-item">
               <a class="cards-link link" href="">
-                <img
-                  src="./images/portfolio1.jpg"
-                  width="360"
-                  height="300"
-                  alt="App Interface Concept"
-                />
+                <div class="cards-folder">
+                  <img
+                    src="./images/portfolio1.jpg"
+                    width="360"
+                    height="300"
+                    alt="App Interface Concept"
+                  />
+                  <p class="cards-folder-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="container-item">
                   <h2 class="cards-title">Banking App Interface Concept</h2>
                   <p class="cards-text">App</p>
@@ -82,12 +96,19 @@
             </li>
             <li class="cards-item">
               <a class="cards-link link" href="">
-                <img
-                  src="./images/portfolio2.jpg"
-                  width="360"
-                  height="300"
-                  alt="Cashless Payment"
-                />
+                <div class="cards-folder">
+                  <img
+                    src="./images/portfolio2.jpg"
+                    width="360"
+                    height="300"
+                    alt="Cashless Payment"
+                  />
+                  <p class="cards-folder-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-item">
                   <h2 class="cards-title">Cashless Payment</h2>
                   <p class="cards-text">Marketing</p>
@@ -96,12 +117,19 @@
             </li>
             <li class="cards-item">
               <a class="cards-link link" href="">
-                <img
-                  src="./images/portfolio3.jpg"
-                  width="360"
-                  height="300"
-                  alt="Meditation App"
-                />
+                <div class="cards-folder">
+                  <img
+                    src="./images/portfolio3.jpg"
+                    width="360"
+                    height="300"
+                    alt="Meditation App"
+                  />
+                  <p class="cards-folder-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-item">
                   <h2 class="cards-title">Meditation App</h2>
                   <p class="cards-text">App</p>
@@ -110,12 +138,19 @@
             </li>
             <li class="cards-item">
               <a class="cards-link link" href="">
-                <img
-                  src="./images/portfolio4.jpg"
-                  width="360"
-                  height="300"
-                  alt="Taxi Service"
-                />
+                <div class="cards-folder">
+                  <img
+                    src="./images/portfolio4.jpg"
+                    width="360"
+                    height="300"
+                    alt="Taxi Service"
+                  />
+                  <p class="cards-folder-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-item">
                   <h2 class="cards-title">Taxi Service</h2>
                   <p class="cards-text">Marketing</p>
@@ -124,12 +159,19 @@
             </li>
             <li class="cards-item">
               <a class="cards-link link" href="">
-                <img
-                  src="./images/portfolio5.jpg"
-                  width="360"
-                  height="300"
-                  alt="Screen Illustations"
-                />
+                <div class="cards-folder">
+                  <img
+                    src="./images/portfolio5.jpg"
+                    width="360"
+                    height="300"
+                    alt="Screen Illustations"
+                  />
+                  <p class="cards-folder-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-item">
                   <h2 class="cards-title">Screen Illustrations</h2>
                   <p class="cards-text">Design</p>
@@ -138,12 +180,19 @@
             </li>
             <li class="cards-item">
               <a class="cards-link link" href="">
-                <img
-                  src="./images/portfolio6.jpg"
-                  width="360"
-                  height="300"
-                  alt="Online Courses"
-                />
+                <div class="cards-folder">
+                  <img
+                    src="./images/portfolio6.jpg"
+                    width="360"
+                    height="300"
+                    alt="Online Courses"
+                  />
+                  <p class="cards-folder-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-item">
                   <h2 class="cards-title">Online Courses</h2>
                   <p class="cards-text">Marketing</p>
@@ -152,12 +201,19 @@
             </li>
             <li class="cards-item">
               <a class="cards-link link" href="">
-                <img
-                  src="./images/portfolio7.jpg"
-                  width="360"
-                  height="300"
-                  alt="Instagram Stories Concept"
-                />
+                <div class="cards-folder">
+                  <img
+                    src="./images/portfolio7.jpg"
+                    width="360"
+                    height="300"
+                    alt="Instagram Stories Concept"
+                  />
+                  <p class="cards-folder-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-item">
                   <h2 class="cards-title">Instagram Stories Concept</h2>
                   <p class="cards-text">Design</p>
@@ -166,12 +222,19 @@
             </li>
             <li class="cards-item">
               <a class="cards-link link" href="">
-                <img
-                  src="./images/portfolio8.jpg"
-                  width="360"
-                  height="300"
-                  alt="Organic Food"
-                />
+                <div class="cards-folder">
+                  <img
+                    src="./images/portfolio8.jpg"
+                    width="360"
+                    height="300"
+                    alt="Organic Food"
+                  />
+                  <p class="cards-folder-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-item">
                   <h2 class="cards-title">Organic Food</h2>
                   <p class="cards-text">Web Site</p>
@@ -180,12 +243,19 @@
             </li>
             <li class="cards-item">
               <a class="cards-link link" href="">
-                <img
-                  src="./images/portfolio9.jpg"
-                  width="360"
-                  height="300"
-                  alt="Fresh Coffee"
-                />
+                <div class="cards-folder">
+                  <img
+                    src="./images/portfolio9.jpg"
+                    width="360"
+                    height="300"
+                    alt="Fresh Coffee"
+                  />
+                  <p class="cards-folder-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="container-item">
                   <h2 class="cards-title">Fresh Coffee</h2>
                   <p class="cards-text">Web Site</p>
@@ -198,14 +268,41 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a class="link logo footer-logo" href="./index.html"
-          >Web<span class="footer-logo-text">Studio</span>
-        </a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-section1">
+          <a class="link logo footer-logo" href="./index.html"
+            >Web<span class="footer-logo-text">Studio</span>
+          </a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-section2">
+          <p class="footer-section2-title">Social Media</p>
+          <ul class="footer-section2-list list">
+            <li class="footer-section2-item">
+              <svg class="footer-section2-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </li>
+            <li class="footer-section2-item">
+              <svg class="footer-section2-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </li>
+            <li class="footer-section2-item">
+              <svg class="footer-section2-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </li>
+            <li class="footer-section2-item">
+              <svg class="footer-section2-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
