--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li class="page-info-item">
               <div class="info-svg-container">
                 <svg class="team-svg" width="64" height="64">
-                  <use xlink:href="./images/icons.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
 
@@ -89,7 +89,7 @@
             <li class="page-info-item">
               <div class="info-svg-container">
                 <svg class="team-svg" width="64" height="64">
-                  <use xlink:href="./images/icons.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <div class="page-info-content">
@@ -103,7 +103,7 @@
             <li class="page-info-item">
               <div class="info-svg-container">
                 <svg class="team-svg" width="64" height="64">
-                  <use xlink:href="./images/icons.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <div class="page-info-content">
@@ -117,7 +117,7 @@
             <li class="page-info-item">
               <div class="info-svg-container">
                 <svg class="team-svg" width="64" height="64">
-                  <use xlink:href="./images/icons.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <div class="page-info-content">
@@ -160,37 +160,37 @@
                 <p class="our-team-item-dscr">Product Designer</p>
                 <ul class="our-team-svg">
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-instagram-2"
+                          href="./images/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-twitter-1"
+                          href="./images/icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-facebook-1"
+                          href="./images/icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-linkedin-1"
+                          href="./images/icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -205,37 +205,37 @@
                 <p class="our-team-item-dscr">Frontend Developer</p>
                 <ul class="our-team-svg">
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-instagram-2"
+                          href="./images/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-twitter-1"
+                          href="./images/icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-facebook-1"
+                          href="./images/icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-linkedin-1"
+                          href="./images/icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -250,37 +250,37 @@
                 <p class="our-team-item-dscr">Marketing</p>
                 <ul class="our-team-svg">
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-instagram-2"
+                          href="./images/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-twitter-1"
+                          href="./images/icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-facebook-1"
+                          href="./images/icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-linkedin-1"
+                          href="./images/icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -295,37 +295,37 @@
                 <p class="our-team-item-dscr">UI Designer</p>
                 <ul class="our-team-svg">
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-instagram-2"
+                          href="./images/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-twitter-1"
+                          href="./images/icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-facebook-1"
+                          href="./images/icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="our-team-info-svg">
-                    <a href="">
+                    <a class="our-team-link" href="">
                       <svg class="team-svg" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-linkedin-1"
+                          href="./images/icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -432,7 +432,7 @@
         <button class="modal-btn" data-modal-close>
           <svg class="modal-svg" width="8" height="8">
             <use
-              xlink:href="./images/icons.svg#icon-close-black-18dp-2-1"
+              href="./images/icons.svg#icon-close-black-18dp-2-1"
             ></use>
           </svg>
         </button>
