--- a/index.html
+++ b/index.html
@@ -336,61 +336,63 @@
           </ul>
         </div>
       </section>
+
+      <section class="customers-info">
+        <div class="container">
+          <h2 class="customers-title">customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-svg" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-svg" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-svg" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-svg" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-svg" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-svg" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
-    <section class="customers-info">
-      <div class="container">
-        <h2 class="customers-title">customers</h2>
-        <ul class="customers-list list">
-          <li class="customers-item">
-            <a href="" class="customers-link">
-              <svg class="customers-svg" width="104" height="56">
-                <use href="./images/icons.svg#icon-Logo"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-item">
-            <a href="" class="customers-link">
-              <svg class="customers-svg" width="104" height="56">
-                <use href="./images/icons.svg#icon-Logo-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-item">
-            <a href="" class="customers-link">
-              <svg class="customers-svg" width="104" height="56">
-                <use href="./images/icons.svg#icon-Logo-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-item">
-            <a href="" class="customers-link">
-              <svg class="customers-svg" width="104" height="56">
-                <use href="./images/icons.svg#icon-Logo-3"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-item">
-            <a href="" class="customers-link">
-              <svg class="customers-svg" width="104" height="56">
-                <use href="./images/icons.svg#icon-Logo-4"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-item">
-            <a href="" class="customers-link">
-              <svg class="customers-svg" width="104" height="56">
-                <use href="./images/icons.svg#icon-Logo-5"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
+
 
     <footer class="footer">
       <div class="container footer-container">
-        <div class="footer-section1">
+        <div class="footer-section-one">
           <a class="link logo footer-logo" href="./index.html"
             >Web<span class="footer-logo-text">Studio</span>
           </a>
@@ -399,28 +401,40 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-section2">
-          <p class="footer-section2-title">Social Media</p>
-          <ul class="footer-section2-list list">
-            <li class="footer-section2-item">
-              <svg class="footer-section2-icon" width="24" height="24">
+        <div class="footer-section-two">
+          <p class="footer-section-two-title">Social media</p>
+          <ul class="footer-section-two-list list">
+            <li class="footer-section-two-item">
+              <a href="" class="footer-section-two-link">
+
+              <svg class="footer-section-two-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg>
+              </a>
             </li>
-            <li class="footer-section2-item">
-              <svg class="footer-section2-icon" width="24" height="24">
+            <li class="footer-section-two-item">
+              <a href="" class="footer-section-two-link">
+
+              <svg class="footer-section-two-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg>
+              </a>
             </li>
-            <li class="footer-section2-item">
-              <svg class="footer-section2-icon" width="24" height="24">
+            <li class="footer-section-two-item">
+              <a href="" class="footer-section-two-link">
+
+              <svg class="footer-section-two-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg>
+              </a>
             </li>
-            <li class="footer-section2-item">
-              <svg class="footer-section2-icon" width="24" height="24">
+            <li class="footer-section-two-item">
+              <a href="" class="footer-section-two-link">
+
+              <svg class="footer-section-two-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
+              </a>
             </li>
           </ul>
         </div>
